Archive2/a7/7b39a758d04db3/output
main.cpp: In function 'int main()':
main.cpp:15:5: error: static assertion failed: 
     static_assert(std::is_trivial<C>::value, ""); // Assert OK
     ^
main.cpp:17:5: error: static assertion failed: 
     static_assert(std::is_pod<C>::value, "");  // Assert fails. Why?
     ^
